# task-app

./: .gitignore  Makefile  alembic.ini  dependency.py  docker-compose.yml  exception.py  exeption.py  fixtures.py  main.py  pyproject.toml  settings.py  test.py
alembic/: env.py
alembic/versions/: 0244bbc78c04_user_id_add_in_tasks_table.py  34546cec581e_user_init.py  cb16935a00e0_yandex_access_token.py  e32ffbcf6230_refactoring.py  ec356fce315d_init.py  f4959d8ee87d_init_all_table.py  f647a71a8a7b_refactoring_user_pfrofile.py  f9df10589da7_extend_user_profile.py
cache/: accessor.py
client/: google.py  yandex.py
database/: __init__.py  accessor.py
handlers/: __init__.py  auth.py  ping.py  tasks.py  user.py
models/: tasks.py  user.py
repository/: auth.py  cache_task.py  task.py  user.py
schema/: __init__.py  auth.py  task.py  user.py
service/: __init__.py  auth.py  task.py  user.py
