[tool.poetry]
name = "test-poetry"
version = "0.1.0"
description = ""
authors = ["Ilya92S <saitovilya26@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.2"
sqlalchemy = "^2.0.32"
pydantic-settings = "^2.4.0"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.2"
redis = "^5.0.8"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
